assets/test-package/tests/failing/compile/test.typ
#import "/src/lib.typ": helper

#helper[Compile Failure]
